# MeetingAgent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  ai-optimization-guide.md  ai_config_manager.py  async-processing-guide.md  docker-compose.yml  docker-setup.md  meeting_agent.py  pyproject.toml  rate-limiting-guide.md  rate_limit_monitor.py  requirements-dev.txt  requirements.txt  setup.py  worker.py
.github/workflows/: ci.yml
config/: .env.example
docs/: API.md
src/meeting_agent/: __init__.py  ai_client.py  ai_config.py  chunking.py  config.py  logging_config.py  main.py  memory_client.py  notion_client.py  queue_client.py  rate_limiter.py  task_manager.py  ui.py
tests/: __init__.py  conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_ai_client.py  test_config.py  test_rate_limiter.py
